--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   xml: ^6.1.0
+  share_plus: ^6.3.4
 
 dev_dependencies:
   flutter_test:
