song lyrics showed in lyrics view

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   xml: ^6.1.0
   share_plus: ^6.3.4
   html: ^0.15.3
+  flutter_html: ^3.0.0-alpha.6
 
 dev_dependencies:
   flutter_test:
