--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: any
+  google_fonts: ^4.0.4
 
 dev_dependencies:
   flutter_test:
