--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
     sdk: flutter
   intl: any
   flutter_launcher_icons: ^0.12.0
+  change_case: ^1.1.0
 
 dev_dependencies:
   flutter_test:
