--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -4,17 +4,17 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/icon/playstore.png"
+  image_path: "assets/icon/icon.png"
   remove_alpha_ios: true # it is just a transparency layer
   web:
     generate: true
-    image_path:  "assets/icon/playstore.png"
+    image_path:  "assets/icon/icon.png"
     background_color: "#hexcode"
     theme_color: "#hexcode"
   windows:
     generate: true
-    image_path:  "assets/icon/playstore.png"
+    image_path:  "assets/icon/icon.png"
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: true
-    image_path:  "assets/icon/playstore.png"
+    image_path:  "assets/icon/icon.png"
