--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   intl: any
   flutter_launcher_icons: ^0.12.0
   change_case: ^1.1.0
+  google_mobile_ads: ^3.0.0
 
 dev_dependencies:
   flutter_test:
