--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.1+1
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
@@ -49,6 +49,7 @@ dependencies:
   flutter_launcher_icons: ^0.12.0
   change_case: ^1.1.0
   google_mobile_ads: ^3.0.0
+  sentry_flutter: ^7.9.0
 
 dev_dependencies:
   flutter_test:
